--- a/portal/chat.html
+++ b/portal/chat.html
@@ -46,6 +46,8 @@
       flex-direction: column;
       overflow: hidden;
     }
+
+    /* 헤더(까만 박스) */
     .header {
       padding: 12px 16px;
       border-bottom: 1px solid rgba(148, 163, 184, 0.35);
@@ -118,6 +120,7 @@
       box-shadow: 0 0 10px rgba(250, 204, 21, 0.95);
     }
 
+    /* 채팅 영역 전체 */
     .chat-shell {
       flex: 1;
       display: flex;
@@ -128,7 +131,7 @@
     .chat-log {
       flex: 1;
       overflow-y: auto;
-      padding: 4px 2px 6px;
+      padding: 4px 2px 10px;
       display: flex;
       flex-direction: column;
       gap: 8px;
@@ -145,9 +148,7 @@
       align-items: flex-start;
       gap: 8px;
     }
-    .msg.user {
-      justify-content: flex-end;
-    }
+    .msg.user { justify-content: flex-end; }
     .avatar {
       width: 26px;
       height: 26px;
@@ -204,22 +205,37 @@
       color: rgba(156, 163, 175, 0.85);
     }
 
+    /* 하단 입력 영역 – 챗GPT 느낌 */
     .input-area {
-      margin-top: 6px;
+      margin-top: 10px;
+      padding: 8px 2px 4px;
       border-top: 1px solid rgba(209, 213, 219, 0.7);
-      padding-top: 6px;
       display: flex;
       flex-direction: column;
-      gap: 4px;
+      gap: 6px;
     }
     .input-row {
       display: flex;
-      align-items: flex-end;
-      gap: 6px;
+      align-items: center;
+      gap: 8px;
       background: #f9fafb;
-      border-radius: 999px;
-      padding: 4px 4px 4px 10px;
+      border-radius: 16px;
+      padding: 8px 10px;
       border: 1px solid rgba(148, 163, 184, 0.35);
+    }
+    .attach-btn {
+      width: 28px;
+      height: 28px;
+      border-radius: 999px;
+      border: none;
+      background: transparent;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      flex-shrink: 0;
+      font-size: 16px;
+      color: var(--text-muted);
     }
     textarea.input {
       flex: 1;
@@ -228,15 +244,18 @@
       resize: none;
       background: transparent;
       font-family: inherit;
-      font-size: 13px;
-      max-height: 96px;
+      font-size: 14px;
+      line-height: 1.5;
+      padding: 4px 0;
+      min-height: 32px;
+      max-height: 120px;
     }
     textarea.input::placeholder {
       color: var(--text-muted);
     }
     button.send {
-      width: 32px;
-      height: 32px;
+      width: 34px;
+      height: 34px;
       border-radius: 999px;
       border: none;
       background: linear-gradient(135deg, #6366f1, #8b5cf6);
@@ -246,9 +265,10 @@
       justify-content: center;
       cursor: pointer;
       font-size: 16px;
+      flex-shrink: 0;
     }
     button.send:disabled {
-      opacity: 0.6;
+      opacity: 0.55;
       cursor: default;
     }
     .hint {
@@ -297,10 +317,10 @@
           <div class="title-sub">Sowon · Personal Chat</div>
         </div>
       </div>
-<div class="status-pill online" id="statusPill">
-  <span class="status-led"></span>
-  <span id="statusText">ONLINE</span>
-</div>
+      <div class="status-pill online" id="statusPill">
+        <span class="status-led"></span>
+        <span id="statusText">ONLINE</span>
+      </div>
     </header>
 
     <div class="chat-shell">
@@ -320,6 +340,7 @@
 
       <form class="input-area" id="chatForm">
         <div class="input-row">
+          <button type="button" class="attach-btn" title="첨부 (준비 중)">📎</button>
           <textarea
             id="chatInput"
             class="input"
@@ -329,7 +350,7 @@
           <button type="submit" class="send" id="sendBtn">⮞</button>
         </div>
         <div class="hint" id="hint">
-          LLM 상태를 확인하는 중이야…
+          Enter로 보내고, Shift+Enter는 줄바꿈이야.
         </div>
       </form>
     </div>
@@ -337,7 +358,6 @@
 
   <script>
     const DIRECTOR_API_URL = "https://sowon.mooo.com/director_core/analyze";
-    // 필요하면 sowon.mooo.com/director/analyze 로 바꿔도 됨
 
     const statusPill = document.getElementById("statusPill");
     const statusText = document.getElementById("statusText");
@@ -353,15 +373,8 @@
       statusPill.classList.remove("online", "offline", "issue");
       if (mode) statusPill.classList.add(mode);
     }
-function setStatus(label, mode) {
-  if (!statusPill || !statusText) return;
-  statusText.textContent = label;
-  statusPill.classList.remove("online", "offline", "issue");
-  if (mode) statusPill.classList.add(mode);
-}
-
-// 페이지 처음 열릴 때 바로 ONLINE으로 세팅
-setStatus("ONLINE", "online");
+    // 처음 상태는 ONLINE
+    setStatus("ONLINE", "online");
 
     function appendMessage(role, text, options = {}) {
       const row = document.createElement("div");
@@ -418,7 +431,7 @@ setStatus("ONLINE", "online");
       if (hint) {
         hint.textContent = sending
           ? "부감독이 대답을 정리하는 중이야…"
-          : "Enter로 보내고, Shift+Enter로 줄바꿈할 수 있어.";
+          : "Enter로 보내고, Shift+Enter는 줄바꿈이야.";
       }
     }
 
@@ -442,6 +455,7 @@ setStatus("ONLINE", "online");
         return data.reply || data.ai_text || "(응답은 왔는데 내용이 비어 있어.)";
       } catch (e) {
         console.error(e);
+        setStatus("OFFLINE", "offline");
         return "지금은 부감독 서버에 바로 연결이 잘 안 되는 것 같아.\n조금 있다가 다시 시도해보자.";
       }
     }
@@ -470,14 +484,16 @@ setStatus("ONLINE", "online");
 
       chatInput.addEventListener("input", () => {
         chatInput.style.height = "auto";
-        const max = 96;
+        const max = 120;
         chatInput.style.height = Math.min(chatInput.scrollHeight, max) + "px";
       });
 
       chatInput.addEventListener("keydown", (e) => {
         if (e.key === "Enter" && !e.shiftKey) {
           e.preventDefault();
-          chatForm.dispatchEvent(new Event("submit", { cancelable: true, bubbles: true }));
+          chatForm.dispatchEvent(
+            new Event("submit", { cancelable: true, bubbles: true })
+          );
         }
       });
     }
