--- a/portal/index.html
+++ b/portal/index.html
@@ -100,27 +100,35 @@
         <div class="attachment-bar" id="chat-attachment-bar"></div>
 
       <div class="input-area">
-        <button class="action-btn" id="chat-image-btn" style="width: 32px; height: 32px; border: none;">
-          <svg width="16" height="16" viewBox="0 0 24 24" fill="none"
-            stroke="currentColor" stroke-width="2">
-            <path
-              d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48">
-            </path>
+        <!-- 왼쪽 + 버튼 (첨부) -->
+        <button class="chat-icon-btn" id="chat-image-btn" type="button" aria-label="파일 첨부">
+          <svg viewBox="0 0 24 24" aria-hidden="true">
+            <circle cx="12" cy="12" r="10"></circle>
+            <line x1="12" y1="8" x2="12" y2="16"></line>
+            <line x1="8" y1="12" x2="16" y2="12"></line>
           </svg>
         </button>
-        <!-- Hidden file input for image upload -->
-        <input type="file" id="chat-image-input" accept="image/*" multiple style="display: none;">
-        <textarea class="input-field" id="chat-input" rows="1" placeholder="부감독에게 메시지 보내기..."></textarea>
-        <button class="action-btn primary" id="chat-send">
-          <svg width="20" height="20" viewBox="0 0 24 24" fill="none"
-            stroke="currentColor" stroke-width="2">
-            <line x1="22" y1="2" x2="11" y2="13"></line>
-            <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+
+        <!-- 숨겨진 파일 입력 -->
+        <input type="file" id="chat-image-input" accept="image/*" multiple style="display:none;" />
+
+        <!-- 텍스트 입력 -->
+        <textarea
+          class="input-field"
+          id="chat-input"
+          rows="1"
+          placeholder="여기에 적고 Enter로 보내. Shift+Enter는 줄바꿈."
+        ></textarea>
+
+        <!-- 오른쪽 보내기 버튼 (위쪽 화살표) -->
+        <button class="chat-icon-btn primary" id="chat-send" type="button" aria-label="메시지 보내기">
+          <svg viewBox="0 0 24 24" aria-hidden="true">
+            <circle cx="12" cy="12" r="10"></circle>
+            <path d="M12 8v8"></path>
+            <path d="M9 11l3-3 3 3"></path>
           </svg>
         </button>
       </div>
-      </div>
-    </div>
 
     <!-- Right Column: Schedule & Home -->
     <div class="side-column">
