--- a/portal/chat.html
+++ b/portal/chat.html
@@ -267,38 +267,57 @@
       cursor: pointer;
     }
 
-    /* 하단 입력 영역 – 챗GPT 느낌 */
+    
+    /* 하단 입력 영역 – ChatGPT 스타일 리파인 */
     .input-area {
-      margin-top: 10px;
-      padding: 8px 2px 4px;
+      margin-top: 8px;
+      padding: 6px 2px 2px;
       border-top: 1px solid rgba(209, 213, 219, 0.7);
       display: flex;
       flex-direction: column;
       gap: 6px;
     }
+
     .input-row {
       display: flex;
       align-items: center;
       gap: 8px;
-      background: #f9fafb;
-      border-radius: 16px;
-      padding: 8px 10px;
+      background: rgba(249, 250, 251, 0.96);
+      border-radius: 999px;
+      padding: 6px 10px;
       border: 1px solid rgba(148, 163, 184, 0.35);
+      box-shadow:
+        0 0 0 1px rgba(148, 163, 184, 0.16),
+        0 12px 30px rgba(15, 23, 42, 0.08);
     }
+
     .attach-btn {
-      width: 28px;
-      height: 28px;
+      width: 30px;
+      height: 30px;
       border-radius: 999px;
       border: none;
       background: transparent;
-      display: flex;
+      display: inline-flex;
       align-items: center;
       justify-content: center;
       cursor: pointer;
       flex-shrink: 0;
-      font-size: 16px;
-      color: var(--text-muted);
+      padding: 0;
     }
+
+    .attach-btn svg,
+    .send svg {
+      width: 18px;
+      height: 18px;
+      stroke: rgba(15, 23, 42, 0.7);
+      stroke-width: 1.7;
+      fill: none;
+    }
+
+    .attach-btn:hover {
+      background: rgba(15, 23, 42, 0.04);
+    }
+
     textarea.input {
       flex: 1;
       border: none;
@@ -306,38 +325,58 @@
       resize: none;
       background: transparent;
       font-family: inherit;
-      font-size: 16px;
+      font-size: 14px;
       line-height: 1.5;
       padding: 4px 0;
-      min-height: 32px;
-      max-height: 120px;
+      min-height: 26px;
+      max-height: 110px;
     }
+
     textarea.input::placeholder {
       color: var(--text-muted);
     }
+
     button.send {
-      width: 34px;
-      height: 34px;
+      width: 32px;
+      height: 32px;
       border-radius: 999px;
       border: none;
-      background: linear-gradient(135deg, #6366f1, #8b5cf6);
-      color: #eef2ff;
-      display: flex;
+      background: radial-gradient(circle at 30% 30%, #f9fafb 0, #7c3aed 40%, #4c1d95 100%);
+      display: inline-flex;
       align-items: center;
       justify-content: center;
       cursor: pointer;
-      font-size: 16px;
       flex-shrink: 0;
+      box-shadow: 0 10px 24px rgba(88, 28, 135, 0.5);
+      padding: 0;
     }
+
+    button.send svg {
+      stroke: #f9fafb;
+    }
+
+    button.send:hover {
+      transform: translateY(-0.5px);
+      box-shadow: 0 12px 30px rgba(88, 28, 135, 0.6);
+    }
+
+    button.send:active {
+      transform: translateY(0);
+      box-shadow: 0 8px 18px rgba(88, 28, 135, 0.5);
+    }
+
     button.send:disabled {
-      opacity: 0.55;
+      opacity: 0.5;
       cursor: default;
+      box-shadow: none;
     }
+
     .hint {
       font-size: 11px;
       color: var(--text-muted);
       padding: 0 4px 2px;
     }
+
 
     .typing .bubble {
       display: inline-flex;
@@ -403,23 +442,37 @@
         </div>
       </div>
 
+      
       <form class="input-area" id="chatForm">
         <div class="attachment-list" id="attachmentList"></div>
         <div class="input-row">
-          <button type="button" class="attach-btn" id="attachBtn" title="파일 첨부">📎</button>
+          <button type="button" class="attach-btn" id="attachBtn" title="파일 첨부">
+            <svg viewBox="0 0 24 24" aria-hidden="true">
+              <circle cx="12" cy="12" r="9"></circle>
+              <line x1="12" y1="9" x2="12" y2="15"></line>
+              <line x1="9" y1="12" x2="15" y2="12"></line>
+            </svg>
+          </button>
           <textarea
             id="chatInput"
             class="input"
             rows="1"
             placeholder="여기에 적고 Enter로 보내. Shift+Enter는 줄바꿈."
           ></textarea>
-          <button type="submit" class="send" id="sendBtn">⮞</button>
+          <button type="submit" class="send" id="sendBtn">
+            <svg viewBox="0 0 24 24" aria-hidden="true">
+              <circle cx="12" cy="12" r="9"></circle>
+              <path d="M12 15V9"></path>
+              <path d="M9 12l3-3 3 3"></path>
+            </svg>
+          </button>
         </div>
         <div class="hint" id="hint">
           Enter로 보내고, Shift+Enter는 줄바꿈이야.
         </div>
         <input type="file" id="fileInput" multiple style="display:none" />
       </form>
+
     </div>
   </div>
 
@@ -669,4 +722,3 @@
   </script>
 </body>
 </html>
-
